<resources>
    <string name="app_name">ContactGuard</string>


    <!--Login and signUp    -->
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="create_your_account">Create your account</string>
    <string name="mobile_no">Enter Your Email</string>
    <string name="pass">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="dont_have_account">Don\'t have an account? SIGN UP</string>
    <string name="have_account">Have an account? Sign In</string>
    <string name="show_pass">Show Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="demoMail">abikom@gmail.com</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="resend_otp">Resend OTP in 30 Sec</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify Your Account</string>
    <string name="otp">Enter Your OTP That You Get</string>
    <string name="enter_your_name">Enter Your Your User Name</string>
    <string name="create_user_name">Create Your User Name</string>
    <string name="let_me_in">Let Me IN</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>