<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AuthSignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_name_border_background"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintBottom_toTopOf="@+id/tvSingIn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvSingIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/create_your_account"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_container" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/mobile_no"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvSingIn"
            app:layout_constraintTop_toBottomOf="@+id/tvSingIn" />

        <EditText
            android:id="@+id/etPhoneNo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:hint="avishe@gmail.com"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textColorHint="#D6CBCB"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/pass"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/etPhoneNo"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNo" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:inputType="numberPassword"
            android:hint="******"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textColorHint="#D6CBCB"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <Button
            android:id="@+id/sendOtp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_customise"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


        <TextView
            android:id="@+id/backSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sendOtp"
            app:layout_constraintStart_toStartOf="@+id/sendOtp"
            app:layout_constraintEnd_toEndOf="@+id/sendOtp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/have_account"
            android:textColor="@color/black" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>